# pingpoint

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: validate.yml
pingpoint/: __main__.py  backend.py  cli.py  context.py  db.py  matcher.py  models.py  profiler.py  runner.py  tester.py  validator.py  web.py
solutions/issue-1/: report.json  v1.json  v2.json  v3.json
solutions/test-task/: v1.json  v2.json
tasks/: example-poem.yaml  issue-1.yaml
tests/: conftest.py  test_backend.py  test_cli.py  test_db.py  test_matcher.py  test_models.py  test_profiler.py  test_runner.py  test_tester.py  test_validator.py
web/templates/: index.html  task.html
