[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pingpoint"
version = "0.1.0"
description = "Decentralized compute cooperative for AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
pingpoint = "pingpoint.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pingpoint"]
