[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pingpoint"
version = "0.1.0"
description = "Decentralized compute cooperative for AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
]

[project.scripts]
pingpoint = "pingpoint.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pingpoint"]
